--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,20 @@
 
 @font-face {
   font-family: Noto Sans KR;
+  src: url("../fonts/NotoSansKR-Light.otf");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: Noto Sans KR;
   src: url("../fonts/NotoSansKR-Regular.otf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Noto Sans KR;
+  src: url("../fonts/NotoSansKR-Medium.otf");
+  font-weight: 500;
 }
 
 html {
@@ -23,8 +36,12 @@ html {
 }
 
 body {
-  font-family: Roboto, Noto Sans KR, sans-serif;
+  font-family: Noto Sans KR, sans-serif;
   min-height: 100vh;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 .global-nav-container {
@@ -108,10 +125,10 @@ main {
     
     .sidebar-nav-links {
       
-      >.nav-item {
+      > .nav-item {
         transition-duration: 0.5s;
         
-        >a {
+        > a {
           display: flex;
           align-items: center;
           width: 100%;
@@ -130,11 +147,11 @@ main {
         .sidebar-detail-nav-links {
           overflow: hidden;
           
-          >.nav-item {
+          > .nav-item {
             height: 0;
             transition-duration: 0.5s;
             
-            >a {
+            > a {
               display: flex;
               align-items: center;
               width: 100%;
@@ -148,21 +165,21 @@ main {
         }
       }
     }
-  
+    
     .sidebar-nav-links--extended {
       
-      >a {
+      > a {
         background-color: $sidebarHoverBackgroundColor !important;
         color: $sidebarHoverFontColor !important;
       }
-    
+      
       img {
         transform: rotate(90deg);
       }
-    
+      
       .sidebar-detail-nav-links {
         
-        >.nav-item {
+        > .nav-item {
           height: 40px !important;
         }
       }
@@ -178,74 +195,10 @@ main {
     width: 100%;
     z-index: 98;
     
-    .content-header {
-      position: relative;
-      display: flex;
-      align-items: center;
-      height: 50px;
-      padding-left: 20px;
-      color: #222222;
-      font-size: 16px;
-      @include shadowDefault;
-      z-index: 97;
-    }
-    
     .content-main {
       display: flex;
-      height: calc(100% - #{$contentHeaderHeight});
-      background-color: #ECEBEB;
-      padding: 0 10px;
-      
-      .card {
-        flex-wrap: wrap;
-        max-width: 50%;
-        width: 100%;
-        padding: 20px 10px;
-  
-        .card-content {
-          width: 100%;
-          background-color: #FFFFFF;
-          @include shadowDefault;
-    
-          .division-line {
-            @include borderDefault(top);
-          }
-          
-          .card-header {
-            display: flex;
-            align-items: center;
-            width: 100%;
-            padding: 20px;
-            font-size: 16px;
-          }
-    
-          .list-header {
-            display: flex;
-            align-items: center;
-            height: 40px;
-            width: 100%;
-            padding-left: 20px;
-            font-size: 14px;
-          }
-    
-          .list {
-      
-            > li {
-              display: flex;
-              align-items: center;
-              height: 50px;
-              width: 100%;
-              padding-left: 20px;
-              font-size: 14px;
-              @include borderDefault(bottom);
-            }
-      
-            > li:last-child {
-              border: none;
-            }
-          }
-        }
-      }
+      height: 100%;
+      background-color: #F5F5F5;
     }
   }
   
@@ -254,15 +207,160 @@ main {
   }
 }
 
-.chart {
-  width: 100%;
-  border: 2px solid #DFDFDF;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 20px;
+.container-fluid {
+  padding: 20px;
+}
+
+.row {
+  margin: 0 -10px;
+}
+
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+  padding: 0 10px 20px 10px;
+}
+
+.container-title {
+  color: $containerTitleFontColor;
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.card {
+  @include shadowDefault;
+  border-radius: 3px;
+  color: $cardFontColor;
+  font-size: 14px;
+  border: none;
   
-  iframe {
-    height: 40vw;
+  .card-title {
+    font-size: 16px;
+    padding: 10px 15px;
+    margin: 0;
+  }
+  
+  .chart-info {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 30px;
+    @include borderDefault("top");
+    
+    .info-item {
+      text-align: center;
+      
+      .info-value {
+        margin-bottom: 5px;
+      }
+      
+      .info-description {
+        color: $cardSemiFontColor;
+        font-weight: 300;
+      }
+      
+      .info-value--increase {
+        color: $color1;
+      }
+  
+      .info-value--decrease {
+        color: $color3;
+      }
+    }
+  }
+  
+  .center-box {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    .box-title {
+      font-size: 20px;
+      font-weight: 500;
+      text-align: center;
+      padding-bottom: 20px;
+      text-shadow: 0 3px 3px rgba(0, 0, 0, .24);
+    }
+    
+    .box-value {
+      font-size: 30px;
+      font-weight: 500;
+      text-align: center;
+      text-shadow: 0 3px 3px rgba(0, 0, 0, .24);
+    }
+  }
+  
+  .chart {
+    height: 300px;
     width: 100%;
   }
+  
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.weather-card {
+  height: 150px;
+  
+  .box-weather {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    
+    img {
+      padding-right: 10px;
+    }
+    
+    span {
+      font-size: 30px;
+      padding-bottom: 2px;
+    }
+  }
+  
+  .box-weather-small {
+    display: flex;
+    align-items: center;
+    
+    img {
+      padding-right: 5px;
+    }
+    
+    span {
+      font-size: 17px;
+      padding-bottom: 3px;
+    }
+  }
+}
+
+.status-card {
+  height: 150px;
+  
+  .status-list {
+    @include borderDefault("top");
+    padding-left: 15px;
+    
+    .status-item {
+      display: flex;
+      align-items: center;
+      height: 35px;
+    }
+  }
+}
+
+.card-red, .card-green, .card-blue {
+  color: $colorCardFontColor;
+  height: 150px;
+}
+
+.card-red {
+  background-color: $color1;
+}
+
+.card-green {
+  background-color: $color2;
+}
+
+.card-blue {
+  background-color: $color3;
 }
