--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -109,7 +109,7 @@
                             <span>14.5%</span>
                         </div>
                         <div class="info-description">
-                            <span>이번 달 평균 대비</span>
+                            <span>작년 대비</span>
                         </div>
                     </li>
                     <li class="info-item">
