--- a/template/emissions/workplace1.html
+++ b/template/emissions/workplace1.html
@@ -45,12 +45,15 @@
                 <ul class="status-list">
                     <li class="status-item">
                         <span>가스 센서</span>
+                        <img src="images/svg/green_circle.svg" alt="">
                     </li>
                     <li class="status-item">
                         <span>유속 센서</span>
+                        <img src="images/svg/red_circle.svg" alt="">
                     </li>
                     <li class="status-item">
                         <span>온도 센서</span>
+                        <img src="images/svg/green_circle.svg" alt="">
                     </li>
                 </ul>
             </div>
@@ -117,7 +120,7 @@
                             <span>14.5%</span>
                         </div>
                         <div class="info-description">
-                            <span>이번 달 평균 대비</span>
+                            <span>작년 대비</span>
                         </div>
                     </li>
                     <li class="info-item">
