--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -19,7 +19,9 @@
         <div class="global-nav-container">
             <nav class="global-nav">
                 <div class="logo">
-                    <a href="/">탄소배출량 산정 시스템</a>
+                    <a href="/">
+                        <span>탄소배출량 산정 시스템</span>
+                    </a>
                 </div>
                 <ul class="global-nav-links">
                     <li><a href="#" id="menu-toggle-btn"><img src="images/svg/menu.svg" alt=""></a>
