--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,7 +55,6 @@ a:hover {
   .global-nav {
     height: 100%;
     display: flex;
-    padding: 0 14px;
     
     .logo {
       height: 100%;
@@ -67,6 +66,8 @@ a:hover {
         display: flex;
         align-items: center;
         color: $headerFontColor;
+        height: 100%;
+        padding: 0 14px;
         
         #logo-image {
           height: 35px;
@@ -86,6 +87,7 @@ a:hover {
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding: 0 14px;
       
       li {
         display: flex;
@@ -135,7 +137,7 @@ main {
           height: 50px;
           padding: 20px;
           color: $sidebarFontColor;
-          font-size: 14px;
+          font-size: 16px;
           
           img {
             transition-duration: 0.5s;
@@ -158,7 +160,7 @@ main {
               height: 100%;
               padding-left: 30px;
               color: $sidebarFontColor;
-              font-size: 12px;
+              font-size: 14px;
               transition-duration: 0.5s;
             }
           }
@@ -344,6 +346,10 @@ main {
       display: flex;
       align-items: center;
       height: 35px;
+      
+      span {
+        margin-right: 15px;
+      }
     }
   }
 }
