--- a/template/emissions/workplace3.html
+++ b/template/emissions/workplace3.html
@@ -101,6 +101,12 @@
             <div class="card">
                 <div class="card-title">
                     <span>지난 CO2 배출량</span>
+                    <select>
+                        <option value="">2020-01</option>
+                        <option value="">2020-02</option>
+                        <option value="">2020-03</option>
+                        <option value="">2020-04</option>
+                    </select>
                 </div>
                 <div class="chart">
                     <iframe src="http://34.64.238.233:3000/d-solo/i7n74InMk/emissions?orgId=1&refresh=5s&from=now-15m&to=now&theme=light&panelId=2" frameborder="0"></iframe>
