--- a/template/emissions/workplace1.html
+++ b/template/emissions/workplace1.html
@@ -106,6 +106,10 @@
                         <option value="">2020-02</option>
                         <option value="">2020-03</option>
                         <option value="">2020-04</option>
+                        <option value="">2020-05</option>
+                        <option value="">2020-06</option>
+                        <option value="">2020-07</option>
+                        <option value="">2020-08</option>
                     </select>
                 </div>
                 <div class="chart">
