--- a/css/main.css
+++ b/css/main.css
@@ -314,9 +314,10 @@ main .content-container .content-main {
   height: 300px;
   width: 100%;
 }
-.card iframe {
+.card .chart iframe {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .weather-card {
