--- a/scss/main.scss
+++ b/scss/main.scss
@@ -304,11 +304,12 @@ main {
   .chart {
     height: 300px;
     width: 100%;
-  }
-  
-  iframe {
-    width: 100%;
-    height: 100%;
+
+    iframe {
+      width: 100%;
+      height: 100%;
+      overflow-x: hidden;
+    }
   }
 }
 
