--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -60,9 +60,7 @@
                 <ul class="chart-info">
                     <li class="info-item">
                         <div class="info-value">
-                            <span>
-                                {{ todayTotalEmissions }}
-                            </span>
+                            <span id="today-total-emissions">-</span>
                         </div>
                         <div class="info-description">
                             <span>오늘 누적 CO2 배출량</span>
@@ -71,7 +69,7 @@
                     <li class="info-item">
                         <div class="info-value info-value--increase">
                             <img src="images/svg/increase_arrow.svg" alt=""><img src="" alt="">
-                            <span>14.5%</span>
+                            <span>-%</span>
                         </div>
                         <div class="info-description">
                             <span>이번 달 평균 대비</span>
@@ -79,7 +77,7 @@
                     </li>
                     <li class="info-item">
                         <div class="info-value">
-                            <span>123,456</span>
+                            <span>-</span>
                         </div>
                         <div class="info-description">
                             <span>다른 어떤 데이터</span>
@@ -93,14 +91,14 @@
                 <div class="card-title">
                     <span>지난 CO2 배출량</span>
                     <select id="past-emission-chart-date-selector">
-                        <option value="2020-01">2020-01</option>
-                        <option value="2020-02">2020-02</option>
-                        <option value="2020-03">2020-03</option>
-                        <option value="2020-04">2020-04</option>
-                        <option value="2020-05">2020-05</option>
-                        <option value="2020-06">2020-06</option>
-                        <option value="2020-07">2020-07</option>
-                        <option value="2020-08">2020-08</option>
+                        <option value="2020-01-01 00:00:00">2020-01</option>
+                        <option value="2020-02-01 00:00:00">2020-02</option>
+                        <option value="2020-03-01 00:00:00">2020-03</option>
+                        <option value="2020-04-01 00:00:00">2020-04</option>
+                        <option value="2020-05-01 00:00:00">2020-05</option>
+                        <option value="2020-06-01 00:00:00">2020-06</option>
+                        <option value="2020-07-01 00:00:00">2020-07</option>
+                        <option value="2020-08-01 00:00:00">2020-08</option>
                     </select>
                 </div>
                 <div class="chart">
@@ -109,7 +107,7 @@
                 <ul class="chart-info">
                     <li class="info-item">
                         <div class="info-value">
-                            <span>20,000t</span>
+                            <span>-</span>
                         </div>
                         <div class="info-description">
                             <span>총 CO2 배출량</span>
@@ -118,7 +116,7 @@
                     <li class="info-item">
                         <div class="info-value info-value--decrease">
                             <img src="images/svg/decrease_arrow.svg" alt="">
-                            <span>14.5%</span>
+                            <span>-%</span>
                         </div>
                         <div class="info-description">
                             <span>작년 대비</span>
@@ -126,7 +124,7 @@
                     </li>
                     <li class="info-item">
                         <div class="info-value">
-                            <span>123,456</span>
+                            <span>-</span>
                         </div>
                         <div class="info-description">
                             <span>다른 어떤 데이터</span>
