--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -30,7 +30,7 @@
         </div>
     </header>
     <main>
-        <nav class="sidebar-nav sidebar--extended">
+        <nav class="sidebar-nav">
             <ul class="sidebar-nav-links">
                 <li class="nav-item">
                     <a href="#">
@@ -74,7 +74,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="content-container content-container--reduced">
+        <div class="content-container">
             <div class="content-main">
                 {% block content %}
                 {% endblock %}
