modify script for specific location

--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -52,7 +52,7 @@
         <div class="col-xl-6">
             <div class="card">
                 <div class="card-title">
-                    <span>오늘 CO2 배출량</span>
+                    <span>오늘 배출량</span>
                 </div>
                 <div class="chart">
                     <iframe id="today-emissions-chart" src="" frameborder="0"></iframe>
@@ -63,7 +63,7 @@
                             <span id="today-total-emissions">-</span>
                         </div>
                         <div class="info-description">
-                            <span>오늘 누적 CO2 배출량</span>
+                            <span>총 배출량</span>
                         </div>
                     </li>
                     <li class="info-item">
@@ -98,7 +98,7 @@
                             <span id="selected-month-total-emissions">-</span>
                         </div>
                         <div class="info-description">
-                            <span>총 CO2 배출량</span>
+                            <span>총 배출량</span>
                         </div>
                     </li>
                     <li class="info-item">
@@ -116,8 +116,29 @@
         <div class="col-xl-6">
             <div class="card">
                 <div class="card-title">
-                
+                    <span>예측 배출량</span>
                 </div>
+                <div class="chart">
+                    <iframe id="" src="" frameborder="0"></iframe>
+                </div>
+                <ul class="chart-info">
+                    <li class="info-item">
+                        <div class="info-value">
+                            <span id="">-</span>
+                        </div>
+                        <div class="info-description">
+                            <span>총 예측 배출량</span>
+                        </div>
+                    </li>
+                    <li class="info-item">
+                        <div class="info-value">
+                            <span id="">-</span>
+                        </div>
+                        <div class="info-description">
+                            <span>정확도</span>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
