--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -2,7 +2,7 @@
 {% extends "layout/base.html" %}
 
 {%  block content -%}
-<div class="container-fluid">
+<div id="emissions-home" class="container-fluid">
     <div class="row">
         <div class="col-12">
             <div class="container-title">
