--- a/template/emissions/workplace2.html
+++ b/template/emissions/workplace2.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-12">
             <div class="container-title">
-                <span>CO2 배출량 - 종합</span>
+                <span>CO2 배출량 - 2번 사업장</span>
             </div>
         </div>
     </div>
