--- a/template/emissions/home.html
+++ b/template/emissions/home.html
@@ -143,5 +143,6 @@
         </div>
     </div>
 </div>
-<script src="js/script/chart.js"></script>
+<script type="module" src="js/script/chart.js"></script>
+<script type="module" src="js/script/weather.js"></script>
 {%  endblock %}
